# wasm-verification

./: Cargo.toml  Makefile.toml  README.md  shell.md
comm/: Cargo.toml
comm/src/: lib.rs
mem-verification/: Cargo.toml  Makefile.toml
mem-verification/src/: lib.rs  main.rs  wasmer_lib.rs  wasmtime_lib.rs
print-info/: Cargo.toml
print-info/src/: main.rs
sources/: simply_wasi.wasm  simply_wasi_bigger.wasm  simply_wasi_strip.wasm
wasi_host/with_args_host/: Cargo.toml
wasi_host/with_args_host/src/: main.rs
wasis/simply-wasi/: Cargo.toml
wasis/simply-wasi/src/: lib.rs
wasis/with_args/: Cargo.toml
wasis/with_args/src/: lib.rs
